Add Lab 11: Investigating a Malware Exploit and update index.html

--- a/index.html
+++ b/index.html
@@ -57,5 +57,10 @@
         <li><a href="lab10/interpret-http-and-dns-data-to-isolate-threat-actor.html">Interpret HTTP and DNS Data to Isolate Threat Actor</a></li>
     </ul>
 
+    <h3>Lab 11</h3>
+    <ul>
+        <li><a href="Lab11/malware-exploit-lab.html">Investigating a Malware Exploit</a></li>
+    </ul>
+
 </body>
 </html>
